fixed about section alignment issues

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,25 +1,23 @@
 *{
-    margin:0;
-    padding:0;
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+
 }
- /* shared style */
+/* shared style */
 .font-open-sans {
   font-family:"Open Sans", sans-serif;
   font-optical-sizing: auto;
   }
 
-
-
-   .logo h2{
-    font-size:40px;
-    font-weight: 1000;
+  .logo h2{
+    font-size: 45px;
 
   }
-
   .color-orange{
-    color:#FD6E0A
+    color:#FD6E0A;
+    font-size: 900;
   }
-
   .btn{
     background-color: #FD6E0A;
     border:none;
@@ -29,67 +27,66 @@
     font-weight: bold;
     color:white;
     cursor:pointer;
+  
+    
   }
-  /* main style */
-  header{
-    background-color:#FFF8F3;
-    padding: top 50px;
-    background: url("../images/developer.png"), url("../images/header_bg.png"),#FFF8F3;
-    background-position: top left, bottom right;
-    background-repeat: no-repeat;
-  }
-  nav{
-    width: 71%;
-    max-width: 1140px;
-    /* border:2px solid rgb(154, 154, 25); */
-    margin:0px auto;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+/* main style */
+ header{
+  background-color: #fff8f3;
+  padding-top: 50px;
+  background: url(../images/developer.png) ,
+  url(../images/header_bg.png), #fff8f3; 
+  background-repeat: no-repeat;
+  background-position: top left,bottom right;
+ }
+nav{
+  width:71%;
+  max-width: 1140px;
+  margin:0px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 nav .menu{
-    display: flex;
-    list-style-type: none;
-    gap:51px;
-    align-items: center;
+  display: flex;
+  list-style-type:none;
+  gap: 51px;
+  align-items: center;
 }
 nav .menu a{
-    font-size: 20px;
-    color:#474747;
-    text-decoration: none;
+  font-size: 20px;
+  color: #474747;
+  text-decoration: none;
 }
 #banner{
-    /* border:1px solid red; */
-    margin: 47px 38px 0 230px;
-    display:flex;
-    justify-items: space-between;
-    align-items: center;
+  margin: 47px 38px 0 230px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
-#banner .banner-content{
-    max-width: 585px;
-}
+
 #banner .banner-content h2{
-    font-size:45px;
-    font-weight: 600;
-    color: #474747;
-    margin-bottom: 5px;
+  font-size:45px;
+  font-weight: 600;
+  color: #474747;
+  margin-bottom: 5px;
 
 }
 #banner .banner-content h1{
-    font-size: 85px;
-    font-weight: bold;
-    color: #181818;
-    margin-bottom: 20px;
+  font-size: 85px;
+  font-style: bold;
+  color: #181818;
+  margin-bottom: 20px;
 
 }
 #banner .banner-content p{
-    font-size: 18px;
-    color: #757575;
-    line-height:30px ;
-    margin-bottom: 30px;
+font-size: 18px;
+color: #757575;
+line-height: 30px;
+margin-bottom: 30px;
+}
+#banner .banner-image img {
+  max-width: 585px;
+  vertical-align: middle;
+}
 
-}
-#banner .banner image{
-    max-width: 585px;
-    vertical-align: middle;
-}
